# MegaResearcher

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md
.claude-plugin/: marketplace.json  plugin.json
agents/: eval-designer.md  experimentalist.md  gap-finder.md  hypothesis-smith.md  literature-scout.md  manuscript-drafter.md  peer-reviewer.md  red-team.md  research-swarm.md  reviser.md  synthesist.md
commands/: research-execute.md  research-init.md  share-traces.md
crates/cli/: Cargo.toml  build.rs
crates/commands/: Cargo.toml
crates/core/: Cargo.toml
crates/mr-cli/: Cargo.toml
crates/mr-cli/src/: escalation.rs  io.rs  lib.rs  main.rs  prelude.rs  render.rs
crates/mr-cli/src/commands/: execute.rs  init.rs  mod.rs  session.rs  verify.rs
crates/mr-cli/tests/: cli.rs  e2e.rs  execute.rs  sessions.rs  verify_cmd.rs  wiring.rs
crates/mr-cli/tests/common/: fake_provider.rs  mod.rs
crates/mr-tui/: Cargo.toml
crates/mr-tui/src/: app.rs  bootstrap.rs  config.rs  cost.rs  escalation.rs  figures.rs  guard.rs  io.rs  lib.rs  theme.rs
crates/mr-tui/src/surface/: artifact.rs  mod.rs  past.rs  run.rs  settings.rs  start.rs
crates/mr-tui/src/widget/: cards.rs  inline_chat.rs  markdown.rs  mod.rs  tree.rs
crates/mr-tui/tests/: app.rs  artifact.rs  converge.rs  cost.rs  e2e.rs  io.rs  past.rs  run.rs  settings.rs  tree.rs
crates/mr-tui/tests/common/: mod.rs  turns.rs
crates/plugins/: Cargo.toml
crates/query/: Cargo.toml
crates/research/: Cargo.toml
crates/research/src/: flows.rs  lib.rs  mcp.rs  paper_chain.rs  phases.rs  prompt_asset.rs  state.rs  verify.rs  worker.rs  worker_tools.rs
crates/research/src/flows/: brainstorm.md  plan.md  spec.md
crates/research/src/orchestrator/: consolidate.rs  dispatch.rs  dispatch_plan.rs  escalation.rs  evaldesign.rs  gaps.rs  gate.rs  hypothesis.rs  mod.rs  preflight.rs  redteam.rs  synthesize.rs  verdict.rs
crates/research/src/paper_chain/: finalize.rs  preflight.rs  protocol_parser.rs  regression.rs  scaffold.rs  verdict.rs
crates/research/src/state/: run_id.rs  run_tree.rs  swarm_state.rs
crates/research/tests/: escalation.rs  fake_provider.rs  finalize.rs  flows.rs  mcp_smoke.rs  orchestrator.rs  phases.rs  plan_parser.rs  preflight.rs  prompt_asset.rs  protocol_parser.rs  regression.rs  scaffold.rs  smoke.rs  state.rs  verdict.rs  verify.rs  worker.rs  worker_tools.rs
crates/research/tests/common/: fake_provider.rs  mod.rs
crates/research/tests/fixtures/agents/: literature-scout.md  red-team.md
crates/research/tests/fixtures/plans/: gap-finding-plan.md  hypothesis-plan.md
crates/research/tests/fixtures/protocols/: specs_protocol.md
crates/research/tests/fixtures/specs/: gap-finding-spec.md  hypothesis-spec.md
crates/tui/: Cargo.toml
docs/: architecture.md
hooks/: doom_loop.py  hooks.json  upload_traces.py
lib/paper_chain/: experiment.py  finalize.py  preflight.py  protocol_parser.py  regression.py  sandbox.py  scaffold.py  verdict.py
lib/runners/: _base.py
mcp/: .env.example  README.md  pyproject.toml  server.py
tests/: manual_dispatch.py  test_doom_loop.py  test_experiment_orchestrator.py  test_finalize.py  test_mcp_imports.py  test_preflight.py  test_protocol_parser.py  test_regression.py  test_runner_base.py  test_runner_skeletons.py  test_sandbox_wrapper.py  test_scaffold.py  test_verdict_parser.py
tools/: ml-intern.sha
(+471 files in other folders)
