[package]
name = "mr-cli"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[lib]
name = "mr_cli"
path = "src/lib.rs"

[[bin]]
name = "mr"
path = "src/main.rs"

[dependencies]
megaresearcher-research = { workspace = true }
claurst-core = { workspace = true }
claurst-api = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }