[package]
name = "megaresearcher-research"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
claurst-core = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
name = "megaresearcher_research"
path = "src/lib.rs"