[package]
name = "megaresearcher-research"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
claurst-api = { workspace = true }
claurst-core = { workspace = true }
claurst-mcp = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
name = "megaresearcher_research"
path = "src/lib.rs"